Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -3498,7 +3498,7 @@ h4.css__title{
     width: calc(100% - 20px);
     margin: 0 auto 144% !important;
     padding: 0;
-    max-width: 800px;
+    max-width: 660px;
 }
 
 .sidebar a.css__title {
